--- a/Sample/BMSSecuritySample/Podfile
+++ b/Sample/BMSSecuritySample/Podfile
@@ -3,7 +3,7 @@
 # Uncomment this line if you're using Swift
 use_frameworks!
 
-target 'FacebookMCA' do
+target 'BMSSecuritySample' do
 pod ‘BMSSecurity’
 end
 
